src/objects/Call_Notes__c.object
<CustomObject>
    <fields>
        <fullName>Action_Items__c</fullName>
        <label>Action Items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Id__c</fullName>
        <label>Activity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_time__c</fullName>
        <label>Meeting time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_of_Competitor__c</fullName>
        <label>Summary of Competitor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Summary_of_Opportunity__c</fullName>
        <label>Summary of Opportunity</label>
        <type>TextArea</type>
    </fields>
    <label>Call Notes</label>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Call Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>